# distribution_pack_example

./: how_to_upload.txt  requirements.txt
distribution_pack/: README.md  license.txt  setup.cfg
