[metadata]
name = intro_distribution_igorss
version = 0.1
author = Igor Santos
author_email = ssantos.igor@hotmail.com
description = A small distribution calculate package
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
