[metadata]
name = intro_distribution_igorss
version = 0.3
author = Igor Santos
author_email = ssantos.igor@hotmail.com
description = A small distribution calculate package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/igorss77/distribution_pack_example
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
